# kaleta

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Containerfile.full  Dockerfile  README.md  SECURITY.md  alembic.ini  calendar-snapshot.md  docker-compose.yml  mkdocs.yml  pyproject.toml  test_import.csv
.ai/: mvp.md  prd.md
.claude/: settings.local.json
.claude/agents/: deps-updater.md  docs-writer.md  i18n-verifier.md  migration-creator.md  plan-archiver.md  scenario-runner.md  security-auditor.md  seed-updater.md  test-runner.md  ux-designer.md  view-scaffolder.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  cla.yml  docker.yml  pages.yml  pr-review.yml
.nicegui/: storage-user-72ede0fd-273d-4307-83bb-4a27ce975844.json
alembic/: env.py
alembic/versions/: 1f58d631c4d7_initial_schema.py  232aa15fb29e_enum_column_types.py  75ce3b1f4e5a_add_institutions.py  a1b2c3d4e5f6_add_currency_and_exchange_rate.py  a4e9b2f1c6d8_add_subscriptions_root_category.py  a4f9d2e7c1b8_add_reserve_funds.py  a5f8d2c1b4e7_add_dismissed_candidate_patterns.py  a8b9c0d1e2f3_add_tag_icon_description.py  a9b8c7d6e5f4_align_enum_and_report_schema.py  b0c1d2e3f4a5_add_planned_transactions.py  b2c3d4e5f6a7_add_currency_rates_table.py  b3e7f2c1d9a0_add_category_parent.py  b6d9c5a2f8e3_add_subscription_notes.py  b9d4e2c8a1f5_seed_canonical_tags.py  c1d2e3f4a5b6_add_external_account_number.py  c3d4e5f6a7b8_add_saved_reports.py  c4f9e2b1a837_add_transaction_splits.py  c5a8d1e3b4f7_add_institution_logo_path.py  c7e9b3f1a2d5_add_credit_and_loan_profiles.py  c8e5b2a9f3d1_add_monthly_readiness.py  d2e3f4a5b6c7_add_payees.py  d5b8a2e7c1f4_add_personal_loans.py  d7a3e1f2b8c5_add_assets.py  d8f1a2b3c4e6_add_users_and_user_id.py  e3f4a5b6c7d8_categories_unique_name_parent.py  e5f6a7b8c9d0_add_audit_log.py  e6b2c1a9f083_add_yearly_plans.py  e7c4b1a3d9f2_add_subscriptions.py  e9f2a3b4c5d6_add_api_tokens.py  f2a8c4d1e5b7_archive_reserve_funds.py  f4a1b8c2d9e7_add_payee_contact_fields.py  f6a7b8c9d0e1_add_tags.py
docs/: architecture.md  bdd.md  cla.md  getting-started.md  index.md  review-checklist.md  roadmap.md  tech-stack.md
docs/adr/: 001-nicegui-as-ui-framework.md  002-sqlalchemy-20-with-dual-database-support.md  003-mvc-service-layer-separation.md  004-pydantic-for-validation-settings.md  005-rest-api-available-by-default.md  006-dockerpodman-deployment.md  007-uv-as-package-manager.md  008-prophet-for-financial-forecasting.md  009-per-user-settings-via-appstorageuser.md  010-budget-range-aggregation.md  011-institution-as-optional-account-grouping-entity.md  012-split-transactions-gnucash-style.md  013-service-level-filtering-and-pagination-for-transactions.md  014-net-worth-as-a-computed-view-with-no-dedicated-model.md  015-physical-assets-as-a-separate-model-from-bank-accounts.md  016-multi-currency-accounts-and-cross-currency-transfers.md  017-progressive-web-app-pwa-support.md  018-category-uniqueness-scoped-to-parent.md  019-payee-as-a-first-class-entity-with-merge-support.md  020-transfer-detection-via-counterparty-account-number-matching.md  021-bdde2e-test-layer-with-pytest-playwright.md  022-plannedrecurring-transactions-as-a-first-class-model.md  023-credit-calculator-as-a-stateless-pure-python-service.md  024-account-balance-forecast-view-replaces-implicit-forecast-pag.md  025-annual-budget-planning-grid-with-year-navigation.md  026-initial-setup-wizard-with-zero-based-budget-enforcement.md  027-settings-page-with-tabbed-layout-and-user-configurable-servi.md  028-subscriptions-category-tree-as-source-of-truth.md  029-credit-card-and-loan-profiles-as-separate-tables-extending-a.md  030-read-only-cross-panel-projection-layer.md  031-sortablejs-drag-and-drop-for-dashboard-widget-reorder.md  032-retire-the-controller-layer-views-call-services-directly.md  033-agpl-core-with-cla.md
docs/plans/: README.md  accounts-group-by-switch.md  audit-planned-vs-code.md  budgets-plan-unification.md  budgets-realization-view.md  budgets-rename-and-payment-calendar.md  categories-templates.md  credit-dark-mode-color-fix.md  credit-first-class.md  dashboard-chart-fluid-height.md  dashboard-command-center.md  dashboard-customize-reset-options.md  dashboard-edit-mode-drag.md  dashboard-widget-resize.md  dedupe-suggestions.md  forecast-model-presets.md  import-multi-file-queue.md  import-per-file-mapping-memory.md  institutions-logos.md  net-worth-layout-refresh.md  observability-anonymous-events.md  payees-identities-automerge.md  q3-auth-single-user.md  q3-engineering-hygiene.md  q3-forecast-optional-prophet.md  q3-spec-enforcement.md  q3-test-safety-net.md  q3-views-refactor.md  q4-dashboard-design-refresh.md  q4-licence-and-cla.md  q4-public-repo-readiness.md  q4-supabase-deployment.md  reports-library.md  safety-funds-months-bar.md  seed-payees-tags-coverage.md  seed-payment-calendar.md  settings-expansion.md  settings-panel-color-fix.md  settings-week-debug-seed.md  setup-zero-config-bootstrap.md  (+20 more)
docs/product/: dashboard.md  financial-wizard.md  index.md
docs/walkthrough/: index.md
scripts/: benchmark_forecast_fallback.py  check_doc_links.py  check_spdx_headers.py  github_bootstrap.sh  github_issues_planned.sh  seed.py  spec_coverage.py  sync_codex_from_claude.ps1  verify.sh
src/kaleta/: __init__.py  exceptions.py  logging_config.py  main.py  pwa.py
tests/: conftest.py
tests/e2e/: conftest.py  seed_helpers.py  test_auth.py  test_budget_plan.py  test_budget_vs_actual.py  test_categories.py  test_credit_calculator.py  test_csv_import.py  test_debt_tracking.py  test_forecast.py  test_payee_identities.py  test_planned_transactions.py  test_reserve_funds.py  test_settings_data_safety.py  test_setup_wizard.py  test_subscriptions.py  test_transactions.py  test_transfer_detection.py
tests/integration/: conftest.py  test_accounts.py  test_api.py  test_api_auth.py  test_budgets.py  test_categories.py  test_institutions.py  test_openapi.py  test_payees.py  test_transactions.py
tests/unit/: test_pwa.py
(+325 files in other folders)
