[project]
name = "kaleta"
version = "0.1.0"
description = "Kaleta - Personal Budget & Finance Management Application"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Dawid" },
]
dependencies = [
    "nicegui>=3.9.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "uvicorn>=0.42.0",
    "aiosqlite>=0.20",
    "prophet>=1.1",
    "fastapi>=0.135.2",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.5",
    "ruff>=0.15.8",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "faker>=40.11.1",
    "bandit>=1.7",
    "coverage>=7.13.5",
]

[project.scripts]
kaleta = "kaleta.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kaleta"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI uses Depends/Query in argument defaults — B008 is a false positive there.
"src/kaleta/api/**" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

